# ctrlc-tiny

./: Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml  test.yml
c_src/: sigint.c  sigint.h
examples/: ctrlc_probe.rs  e2e_init_ctrlc.rs  e2e_init_ctrlc_with_print.rs  multi_ctrlc.rs
src/: bindings.rs  lib.rs
tests/: e2e.rs
