[package]
name = "ctrlc-tiny"
version = "0.1.0"
authors = ["Koji Murata <k@malt03.com>"]
description = "A minimal signal-safe Ctrl-C flag for use in polling loops."
license = "MIT OR Apache-2.0"
repository = "https://github.com/malt03/ctrlc-tiny"
keywords = ["ctrlc", "signal", "SIGINT", "tiny", "flag"]
categories = ["command-line-utilities", "os"]
documentation = "https://docs.rs/ctrlc-tiny"
rust-version = "1.70"

[features]
default = []

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.29"

[dev-dependencies]
libc = "0.2.174"
