[package]
name = "ctrlc-tiny"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "A tiny crate for checking if Ctrl-C was pressed — no handlers, no AtomicBool."
license = "MIT OR Apache-2.0"
repository = "https://github.com/malt03/ctrlc-tiny"
homepage = "https://github.com/malt03/ctrlc-tiny"
documentation = "https://docs.rs/ctrlc-tiny"
keywords = ["ctrlc", "signal", "SIGINT", "tiny", "signal-safe"]
categories = ["command-line-utilities", "os"]
include = [
    "/src/**",
    "/c_src/**",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
]

[features]
default = []

[build-dependencies]
bindgen = "0.72.0"
cc = "1.2.29"

[dev-dependencies]
libc = "0.2.174"
